# cortex-code-hands-on

./: bikes_bicimad_20260407_1309.parquet  bikes_bicimad_20260407_1457.parquet  schema.sql  tools_config.yaml
.cortex/skills/financial-demo-prep/: SKILL.md
Fidelity-app/: High_level_plan.md  environment.yml  fidelity_churn_analysis.ipynb  implementation_plan.md  pyproject.toml  snowflake.yml  streamlit_app.py
Fidelity-app/.streamlit/: secrets.toml
assets/: architecture-diagram (ASCII version).txt  architecture-diagram.md  data-mapping.md  discovery-notes.md  executive-summary.md  index.md  integration-guide.md  pinnacle-financial-dashboard.dash  role-hierarchy.md  security-architecture.md  security-document.md  soc2-checklist.md  validation-queries.sql
exercises/: .gitignore  exercise-1-rapid-demo.md  exercise-2-skills.md  exercise-3-documentation.md
extras/: Lab_sql_fixes.sql
my-usage-dashboard/: environment.yml  pyproject.toml  queries.sql  snowflake.yml  streamlit_app.py
streamlit-app/: DEPLOYMENT_GUIDE.md  README.md  pyproject.toml  revenue_analysis.sql  schema.sql  snowflake.yml  streamlit_app.py
streamlit-app/output/bundle/streamlit/pinnacle_financial_dashboard/: environment.yml  streamlit_app.py
urban-biker-lakehouse/: .gitignore  README.md  requirements.txt
urban-biker-lakehouse/app/: streamlit_app.py
urban-biker-lakehouse/scripts/: extract_data.py  generate_keypair.py  load_data.py  run_extract.ps1  setup_snowflake.sql
urban-biker-lakehouse/sql/: 00_setup.sql  run_all.sql
urban-biker-lakehouse/sql/01_raw/: stages.sql  tables.sql
(+12 files in other folders)
